// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshots > matches default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnyFh sc-iCoHzw cgXDQy is-medium has-error aje-dropdown"
    error="some error"
  >
    <div
      class="sc-fujznN RVPnQ aje-combobox"
    >
      <label
        class="sc-dlniIP coPbkZ aje-label aje-label"
        for="Combobox-:r0:-input"
      >
        Text Label
      </label>
      <p
        class="sc-hKFymg kNRMRh aje-label--message"
      >
        message
      </p>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="Combobox-:r0:-listbox"
        class="sc-pNWRh iBRcVz aje-combobox__input is-searchable"
        id="Combobox-:r0:-combo"
        role="combobox"
      >
        <input
          aria-autocomplete="both"
          aria-controls="Combobox-:r0:-listbox"
          aria-describedby="Combobox-:r0:-error"
          aria-labelledby="Combobox-:r0:-label"
          class="sc-jrsKJM nsEeC"
          id="Combobox-:r0:-input"
          type="text"
          value="content"
        />
      </div>
      <div
        class="sc-gKAaef fgFsaX aje-popover is-full aje-popover-bottom-left"
      >
        <ul
          aria-labelledby="Combobox-:r0:-label"
          class="sc-kEqXeH jBtPvT aje-combobox__menu"
          id="Combobox-:r0:-listbox"
          role="listbox"
        />
      </div>
    </div>
    <p
      class="sc-eCAqax dNYzUp aje-label--error"
      id="Combobox-:r0:-error"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots > matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnyFh sc-iCoHzw cgXDQy is-medium has-error aje-dropdown--floating"
    error="some error"
  >
    <div
      class="sc-fujznN RVPnQ aje-combobox"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="Combobox-:r1:-listbox"
        class="sc-pNWRh iBRcVz aje-combobox__input is-searchable"
        id="Combobox-:r1:-combo"
        role="combobox"
      >
        <input
          aria-autocomplete="both"
          aria-controls="Combobox-:r1:-listbox"
          aria-describedby="Combobox-:r1:-error"
          aria-labelledby="Combobox-:r1:-label"
          class="sc-jrsKJM nsEeC"
          id="Combobox-:r1:-input"
          type="text"
          value="content"
        />
      </div>
      <div
        class="sc-gKAaef fgFsaX aje-popover is-full aje-popover-bottom-left"
      >
        <ul
          aria-labelledby="Combobox-:r1:-label"
          class="sc-kEqXeH jBtPvT aje-combobox__menu"
          id="Combobox-:r1:-listbox"
          role="listbox"
        />
      </div>
      <label
        class="sc-dlniIP coPbkZ aje-label"
        for="Combobox-:r1:-input"
      >
        Text Label
      </label>
    </div>
    <p
      class="aje-label--message"
    >
      message
    </p>
    <p
      class="sc-eCAqax dNYzUp aje-label--error"
      id="Combobox-:r1:-error"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;
